...
        self.alertPresenter = alert
        self.tokenStorage = OAuth2TokenStorage()
    }

    func presentAlert() {
        let alertExit = AlertModel(
            title: "Пока, пока!",
            message: "Уверены, что хотите выйти?",
            primaryButtonText: "Да",
            primaryCompletion: { [weak self] in
                guard let self = self else { return }

                WebViewViewController.clean()
                self.tokenStorage?.token = nil
                self.view?.didExitFromAccount()
...
