...
        imageView.image = UIImage(named: "AuthScreen")
    }

    private func configButton() {
        view.addSubview(buttonEnter)

        buttonEnter.setTitle("Войти", for: .normal)
        buttonEnter.setTitleColor(UIColor.ypBlack, for: .normal)
        buttonEnter.titleLabel?.font = UIFont.boldSystemFont(ofSize: Constants.buttonFontSize)
        buttonEnter.backgroundColor = .ypWhite
        buttonEnter.layer.masksToBounds = true
        buttonEnter.layer.cornerRadius = Constants.buttonCornerRadius
        buttonEnter.addTarget(self, action: #selector(didTapEnterButton), for: .touchUpInside)
        buttonEnter.accessibilityIdentifier = "Authenticate"
    }

    private func configConstraint() {
        imageView.translatesAutoresizingMaskIntoConstraints = false
        buttonEnter.translatesAutoresizingMaskIntoConstraints = false
        NSLayoutConstraint.activate([
...
