...

// MARK: - WebViewViewController Configuration
extension WebViewViewController {
    private func configWebView() {
        view.addSubview(webView)
        webView.backgroundColor = .ypWhite
        webView.accessibilityIdentifier = "UnsplashWebView"
    }

    private func configButton() {
        view.addSubview(buttonBack)

        guard let navBackButton = UIImage(named: "nav_back_button") else { return }
...
