...
        ])
    }

    private func configExitButton() {
        exitButton.setImage(UIImage(named: "exit"), for: .normal)
        exitButton.addTarget(self, action: #selector(didTapExitButton), for: .touchUpInside)
        exitButton.accessibilityIdentifier = "Exit"
    }

    private func configLabel(_ label: UILabel, text: String, font: UIFont? = UIFont.sfRegular) {
        label.text = text
        label.font = font
        label.textColor = .ypWhite
...
